AkiTemp/project_setup_notes.txt

TO DO
c++redist (py)
  look for
  install in SetupRequirements
build tools (py)
  install in SetupRequirements
premake
  is it actually used? --> no, remove it
  what is it,
  check for install
  install in SetupRequirements

upgrade of requirement is not handled

python not as installer? but extracted zip to dir

download scripts should check if installer is already downloaded
make py part of setup script behave like CMake's

combine py-setup & cmake-setup into 1 script
chain scripts together

docuemnt in each script what things do

cleanup installers through script

installers are not good for cleanup: deleting the folder causes undefined behavior in windows: it counts program as installed but broken.
favour: archives

test
  clean pc
  with installs
  with manual installs

main scripts:
SetupProject - git, python & cmake setup scripts-> verify c++redist & build tools -> then CompileDependencies & GenerateProject
BuildEditor - build editor executable. assumes project generated 
BuildGame (todo) - build game executable. assumes project generated.

sub scripts:
GenerateProject - generate project files using cmake
VerifyAndSetGit - git installed & callable, submodule init, lfs init, longpaths?
VerifyAndSetSetupRequirements - python & cmake: find, install, set variable
VerifyAndSetProjectRequirements - c++redist & vsbuildtools
CompileDependencies - complie project dependencies, assumes cmake, git and python are OK and callable
GenerateProject - generates VS project, assumes cmake, git and python are OK and callable

08 05
figured out how to direct physx's packman to our local folder

08 04
there is an issue with pip when installing from script? when doing packages dl --> only if improperly uninstalling python by deleting the folder
assimp can't find vs17 2022 community ? ---> CMakeCache issue

with correct packages installed for build tools: no need for custom path to generator_instance?

08 03
laptop which splits between integrated & dedicated GPU causes <unhandled_exception thread access error> with risk of corruption:
  D3D11 CORRUPTION: ID3D11DeviceContext::OMSetRenderTargets: Two threads were found to be executing functions associated with the same Device[Context] at the same time. 
! physX installs packman-repo to C:/

cmake can't find vs version, it is looking for VS 17 2022. But with default setup we are using MSBuildTools.
Was this tested? Or am I just messing stuff up?

check vs build tools
vswhere.exe -products Microsoft.VisualStudio.Product.BuildTools
vswhere.exe -products * <-- this lists all
but how to read that from .bat?

did cmake actually work for them does it just work for them? Or did they never bother to check.
GenerateProject.bat doesn't work either without VS 17 2022 installed, gotta figure out how to use build tools
--> figured out params, but need specific packages when installing build tools, should also be possible to install to specific directory


08 01
todo assemble!
don't forget to cleanup in the install scripts
cmake and python scripts needs to be a base-script so the variables are set right

07 31
https://learn.microsoft.com/en-us/answers/questions/218042/how-can-i-find-out-which-vc-redist-x86-exe-to-use
c++ redist to use is based on toolset: vs2022 would be ?
https://stackoverflow.com/questions/46178559/how-to-detect-if-visual-c-2017-redistributable-is-installed
check registry

vs_BuildTools.exe silent:
https://learn.microsoft.com/en-us/answers/questions/192162/visual-studio-build-tools-silent-install
'vs_buildtools.exe --quiet --add Microsoft.VisualStudio.Workload.VCTools'

https://stackoverflow.com/questions/22575662/filename-too-long-in-git-for-windows

07 30
issues with updating git submodules: git is not in PATH

silent install git/ cmd args:
https://superuser.com/questions/944576/git-for-windows-silent-install-silent-arguments
https://jrsoftware.org/ishelp/index.php?topic=setupcmdline
flags: https://gitforwindows.org/silent-or-unattended-installation.html


07 29
extract using `tar`
https://askubuntu.com/questions/25347/what-command-do-i-need-to-unzip-extract-a-tar-gz-file

07 28
THIS ONE IS FOR POWERSHELL
extract zip from cmd:
https://www.reddit.com/r/Windows10/comments/71z96c/unzip_from_command_line/
Expand-Archive "C:\Downloads\file.zip" "C:\Downloads"

https://www.robvanderwoude.com/parameters.php
startup args cmd
%1 to %9

07 25
https://steve-jansen.github.io/guides/windows-batch-scripting/part-2-variables.html
batch variables

`where py`
`where python`
prints python folder -> `where` searches PATH system variables and the current directory

c++vcredist
https://vcredist.com/get-installedvcredist/ - for powershell

could check registry:
https://stackoverflow.com/questions/12206314/detect-if-visual-c-redistributable-for-visual-studio-2012-is-installed
"You can check for the Installed value to be 1 in this registry location: 
HKEY_LOCAL_MACHINE\SOFTWARE\Wow6432Node\Microsoft\VisualStudio\11.0\VC\Runtimes\x86 
on 64-bit systems."

07 24
Additional commands for MSVC
https://learn.microsoft.com/en-us/visualstudio/install/use-command-line-parameters-to-install-visual-studio?view=vs-2022


07 20 & 23
Clean install from Laptop
Remove all development related things: 
O Visual Studio
O C++
O Python
O CMake
O MSVC Build tools
X Git

Run SetupProjects.bat
Python not found -> Please install

We could use winget
Try manual web-query for pythoninstaller
https://docs.python.org/3/using/windows.html

need to force install path for python, ensure PATH & script cont
https://docs.python.org/3/using/windows.html

Complete all requirements
Then git submodules
Then setup

Run Executables e.g installers with Python: https://stackoverflow.com/questions/1811691/running-an-outside-program-executable-in-python
could use for CMake

pip install command is for installing python packackes => pip install cmake means installing cmake-package for python

CMake
https://cmake.org/pipermail/cmake/2008-December/025724.html
/S command line arg to run silent
/D to specify install directory
PATH
https://discourse.cmake.org/t/cmake-silent-install-with-options-help/1475/2
msiexec /i cmake-x.y.z-windows-x86_64.msi ALLUSERS=1 ADD_CMAKE_TO_PATH=System /qn

Saving installed requrements to folder inside repo is NOT a good idea.
Deleting them from there does not properlt uninstall the program.

Probably best:
Check if CMake is found through PATH
Check if CMake is found in expected folder
if not: ask permission to install CMake to folder adjacent to repo <show path>, paste ZIP there

Python should be installed in a default directory, allowing easier uninstall for users

07 17
CMake Error at CMakeLists.txt:185 (source_group):
  source_group ROOT: 
  F:/Havtorn/Havtorn/External" is not a prefix of file:
  F:/Havtorn/Havtorn/External/imgui/imconfig.h

-- Configuring incomplete, errors occurred!

A subdirectory or file -p already exists.
Error occurred while processing: -p.


// a lot of errors in box2d these types:
F:\Havtorn\Havtorn\External\box2d\src\solver.h(127,17): error C2085: 'workerCount': not in formal parameter list [F:\Ha
vtorn\Havtorn\External\box2d\build\src\box2d.vcxproj]
F:\Havtorn\Havtorn\External\box2d\src\solver.h(129,2): error C2061: syntax error: identifier 'b2SolverStage' [F:\Havtor
n\Havtorn\External\box2d\build\src\box2d.vcxproj]

CMakeLists.txt
set(EXTERNAL_FOLDER "../External/")
${EXTERNAL_FOLDER}imgui/imconfig.h => 
    ../External/imgui/imconfig.h

source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} "../External/" FILES ${IMGUI_FILES})
                                                    ^removed -->
                                                    source_group ROOT: 
                                                    F:/Havtorn/Havtorn/Source is not a prefix of file:
                                                    F:/Havtorn/Havtorn/External/imgui/imconfig.h
Remove EXTERNAL_FOLDER from IMGUI_FILES -->


SetupCMake isntalls a version of CMake that does not support
certain features we use https://cmake.org/cmake/help/latest/command/source_group.html
e.g TREE    Added in version 3.8.

For Python will likely need a script that sets Env Variables
